added pagination to profiles backend response
